[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/background/NewBackground1920x1080.png" type="Texture" id=1]
[ext_resource path="res://src/Menu/fade_in/FadeIn.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/icons/Iconic2048x2048_cropped_87.png" type="Texture" id=3]
[ext_resource path="res://src/UserInterface/CustomIconButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Actors/GirlAnimatedShort.tres" type="SpriteFrames" id=5]
[ext_resource path="res://src/Menu/TitleLable.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Menu/Settings.gd" type="Script" id=7]
[ext_resource path="res://assets/ninepatch/Empty1024x1024-03-05.png" type="Texture" id=8]
[ext_resource path="res://assets/ninepatch/Empty1024x1024-03-07.png" type="Texture" id=9]
[ext_resource path="res://src/Actors/BoyAnimatedShort.tres" type="SpriteFrames" id=10]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
texture_selected = ExtResource( 9 )
texture_deselected = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1820.0
margin_bottom = 980.0

[node name="Title" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1820.0
margin_bottom = 300.0

[node name="CustomButton" parent="MarginContainer/VBoxContainer/Title" instance=ExtResource( 4 )]
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
expand = true
scene_to_load = "res://src/Menu/MainMenu.tscn"

[node name="TitleLable" parent="MarginContainer/VBoxContainer/Title" instance=ExtResource( 6 )]
margin_left = 304.0
margin_right = 1516.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Beállítások"
align = 1
valign = 1

[node name="Padding" type="Control" parent="MarginContainer/VBoxContainer/Title"]
margin_left = 1520.0
margin_right = 1820.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 0 )

[node name="MarginContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 304.0
margin_right = 1820.0
margin_bottom = 980.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="left" type="Control" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 226.0
margin_bottom = 676.0
size_flags_horizontal = 3

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 230.0
margin_right = 1589.0
margin_bottom = 676.0
size_flags_horizontal = 7
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBoy" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/Buttons"]
margin_right = 654.0
margin_bottom = 676.0
rect_min_size = Vector2( 400, 400 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 4

[node name="SpriteBoy" type="AnimatedSprite" parent="MarginContainer/VBoxContainer/MarginContainer/Buttons/ButtonBoy"]
position = Vector2( 491.083, 316.177 )
frames = ExtResource( 10 )
animation = "run"

[node name="ButtonGirl" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/Buttons"]
margin_left = 704.0
margin_right = 1359.0
margin_bottom = 676.0
rect_min_size = Vector2( 400, 400 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 4

[node name="SpriteGirl" type="AnimatedSprite" parent="MarginContainer/VBoxContainer/MarginContainer/Buttons/ButtonGirl"]
position = Vector2( 100.182, 70.1815 )
frames = ExtResource( 5 )
animation = "idle"
centered = false

[node name="right" type="Control" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 1593.0
margin_right = 1820.0
margin_bottom = 676.0
size_flags_horizontal = 3

[node name="FadeIn" parent="." instance=ExtResource( 2 )]
visible = false
[connection signal="button_down" from="MarginContainer/VBoxContainer/MarginContainer/Buttons/ButtonBoy" to="." method="_on_ButtonBoy_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/MarginContainer/Buttons/ButtonGirl" to="." method="_on_ButtonGirl_button_down"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
